--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Bassoon Reeds</title>
+  </head>
+  <body>
+    I make cool bassoon reeds
+  </body>
+  
+</html>
