--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Bassoon Reeds</title>
   </head>
   <body>
-    <a href = www.pnb.org>I make cool bassoon reeds</a>
+    I make cool bassoon reeds
   </body>
   
 </html>
